[July-11- add more questions]